[package]
    name = "spm_precompiled"
    version = "0.1.5"
    authors = [
        "Nicolas Patry <patry.nicolas@protonmail.com>"
    ]
    edition = "2024"
    homepage = "https://github.com/huggingface/spm_precompiled"
    repository = "https://github.com/huggingface/spm_precompiled"
    documentation = "https://docs.rs/spm_precompiled/"
    license = "Apache-2.0"
    keywords = [
        "SentencePiece",
        "precompiled_charsmap",
        "Darts",
        "DoubleArray"
    ]
    readme = "./README.md"
    description = """
This crate aims to emulate https://github.com/google/sentencepiece Dart::DoubleArray
struct and it's Normalizer. 

This crate is highly specialized and not intended for general use.
"""

[dependencies]
    serde = { version = "1.0", features = ["derive"] }
    nom = "8.0.0"
    unicode-segmentation = "1.12.0"
    base64 = "0.22.1"
    memchr = "2.7"

[dev-dependencies]
    serde_json = "1.0"
